--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign up - Alumni nexus</title>
     <!-- <link rel="stylesheet" href="styles.css"> -->
     <style>
         body {
@@ -103,7 +103,7 @@
 </head>
 
 <body>
-    <center><b>Make the most of your professional life</b></center>
+    <center><b>Alumni Nexus - Simplyfying Alumni management</b></center>
     <div class="container">
         <img src="signup.jpg" alt="Sign Up Image" class="signup-img">
         <form class="signup-form">
