--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required>
             </div>
+            <div class="form-group">
+                <label for="c-password">Confirm Password:</label>
+                <input type="password" id="c-password" name="password" required>
+            </div>
             <button type="submit" class="btn">Sign Up</button>
         </form>
     </div>
