--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,7 @@
                         <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
                         <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
                     </div>
-                    <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div>
+                    
                 </div>
             </div>
             <div class="col-md-4">
@@ -92,6 +92,7 @@
                     <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>
                 </div>
             </div>
+            <div class="mt-5 text-center"><button class="btn btn-primary profile-button" type="button">Save Profile</button></div> <br>
         </div>
     </div>
     </div>
