--- a/profile.html
+++ b/profile.html
@@ -80,7 +80,7 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
-                        <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
+                        <div class="col-md-6"><label class="labels">College</label><input type="text" class="form-control" value="" placeholder="state"></div>
                     </div>
                     
                 </div>
