--- a/first.html
+++ b/first.html
@@ -210,6 +210,17 @@
   .dropdown:hover .dropdown-content {
     display: block;
   }
+  .od{
+    margin: 20px;
+    font-size: 25px;
+    background-color: #f5f5f5;
+    line-height: 40px;
+  }
+  .od h1{
+    text-align: center;
+    margin: 20px;
+  }
+  
     </style>
 </head>
 
@@ -224,25 +235,37 @@
     <div class="first">
         <div class="navbar">
             <div class="dropdown">
-                <button class="dropbtn">Meet                  <i class="fa fa-caret-down">⌄</i>
+                <button class="dropbtn">Profile                 <i class="fa fa-caret-down">⌄</i>
                 </button>
                 <div class="dropdown-content">
                   <a href="profile.html">View progile</a>
+                  <a href="profile.html">Edit profile</a>
                   <a href="login.html">Sign out</a>
-                  <a href="#"></a>
                 </div>
               </div>
-            <nav class="naving"><a href="#"> ALUMNI HOME</a></nav>
-            <nav class="naving"> <a href="#carrirnetwork">CARRIER NETWORK</a></nav>
-            <nav class="naving"><a href="#"> POST</a></nav>
-            <nav class="naving"><a href="#"> NOTIFICATION</a> </nav>
-            <nav class="naving"><a href="#"> JOBS</a> </nav>
-            <nav class="naving"><a href="#"> RESOURCES</a> </nav>
+            <nav class="naving"><a href="index.html"> ALUMNI HOME</a></nav>
+            <nav class="naving"> <a href="anet.html">CARRIER NETWORK</a></nav>
+            <nav class="naving"><a href="alpost.html"> POST</a></nav>
+            <nav class="naving"><a href="alnot.html"> NOTIFICATION</a> </nav>
+            <nav class="naving"><a href="aljob.html"> JOBS</a> </nav>
+            <nav class="naving"><a href="tech.html"> RESOURCES</a> </nav>
         </div>
         <div class="photo">
             <img src="first.jpg" alt="">
         </div>
     </div>
+    <div class="od">
+        <h1>Objectives</h1>
+    <ul class="objectives">
+        <li>To foster continuous engagement of the alumni with their alma mater.</li>
+        <li>To promote a goodwill and sense of pride to both alumni and Alma Mater. </li>
+        <li>The alumni contribute immensely to the development of the student community by providing them industry interface and guiding and empowering them through regular interactions in the form of lecture series, mock interviews, soft skill training, internships, placements etc</li>
+        <li>To strengthen a lifelong relationship between the university and its alumni through various cultural and social Initiatives.</li>
+        <li>To establish an external support from alumni in course designing on the basis of scope and market trend, promoting entrepreneurship, industrial research, training program for students etc.</li>
+        <li>To encourage and build the sense of belongingness among the members of the alumni.</li>
+        <li>To Promote and encourage academic; professional, and social activities that concern Alumni. </li>
+    </ul>
+</div>
     <section class="hero">
         <div class="container">
             <h2>Career Guidance in Engineering</h2>
