--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 
         body {
             font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
+            background-color: white;
             /* Add background color for better readability */
         }
 
@@ -137,6 +137,7 @@
             font-size: 23px;
             font-family: Georgia, 'Times New Roman', Times, serif;
             margin: 20px;
+            line-height: 50px;
         }
 
         .d2 {
@@ -280,11 +281,11 @@
             <ul class="menu">
                 <li><a href="#home"> Home</a></li>
                 <li><a href="anet.html">Carrier Network</a></li>
-                <li><a href="alpost.html"> Resource sharing</a></li>
-                <li><a href="alnot.html">Chat with alumni</a></li>
+                <li><a href="alres.html"> Resource sharing</a></li>
+                <li><a href="chat.php">Chat with alumni</a></li>
                 <li><a href="aljob.html"> Jobs</a></li>
-                <li><a href="alres.html">Posts</a></li>
-                <li><a href="chat.html">Notifications</a></li>
+                <li><a href="alpost.html">Posts</a></li>
+                <li><a href="alnot.html">Notifications</a></li>
             </ul>
         </nav>
         <div class="d1">
@@ -384,7 +385,7 @@
             </p>
 
         </div>
-
+        <div class="line"></div>
         <section class="hero">
             <div class="container">
                 <h2>Career Guidance in Engineering</h2>
