--- a/home.html
+++ b/home.html
@@ -65,6 +65,7 @@
             transition: color 0.3s;
             font-size: 22px;
             margin: 5px;
+            line-height: 90px;
         }
 
         .menu a:hover {
@@ -258,6 +259,47 @@
         footer p {
             margin: 0;
         }
+        .dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: black;
+    font-weight: 500;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones */
+    margin: 0; /* Important for vertical align on mobile phones */
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  /* Add a grey background color to dropdown links on hover */
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
     </style>
 </head>
 
@@ -279,6 +321,18 @@
 
             <label for="menu-toggle" class="menu-icon">&#9776;</label>
             <ul class="menu">
+                <div class="dropdown">
+                    <button class="dropbtn" id="profiletog" style="color: #fff;transition: color 0.3s;
+                    font-size: 22px;
+                    margin: 5px;
+                    line-height: 50px;">Profile
+                    </button>
+                    <div class="dropdown-content">
+                      <a href="profile.php">View progile</a>
+                      <a href="profile.php">Edit profile</a>
+                      <a href="login.php">Sign out</a>
+                    </div>
+                  </div>
                 <li><a href="#home"> Home</a></li>
                 <li><a href="anet.html">Carrier Network</a></li>
                 <li><a href="alres.html"> Resource sharing</a></li>
