--- a/home.html
+++ b/home.html
@@ -330,7 +330,7 @@
                     <div class="dropdown-content">
                       <a href="profile.php">View progile</a>
                       <a href="profile.php">Edit profile</a>
-                      <a href="login.php">Sign out</a>
+                      <a href="login.php">Log out</a>
                     </div>
                   </div>
                 <li><a href="#home"> Home</a></li>
